force-app/main/default/objects/Disposition__c/Disposition__c.object-meta.xml
<CustomObject>
    <label>Disposition</label>
    <nameField>
        <label>Disposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disposition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>