force-app/main/default/objects/Disposition__c/fields/Disposition_City__c.field-meta.xml
<CustomField>
    <fullName>Disposition_City__c</fullName>
    <label>Disposition City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>