force-app/main/default/objects/Disposition__c/fields/Disposition_Code__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Code__c</fullName>
    <label>Disposition Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>