force-app/main/default/objects/Disposition__c/fields/Disposition_Country__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Country__c</fullName>
    <label>Disposition Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>