force-app/main/default/objects/Disposition__c/fields/Disposition_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Latitude__c</fullName>
    <label>Disposition Latitude</label>
    <type>TextArea</type>
</CustomField>