force-app/main/default/objects/Disposition__c/fields/Disposition_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Longitude__c</fullName>
    <label>Disposition Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>