force-app/main/default/objects/Disposition__c/fields/Disposition_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Disposition_PostalCode__c</fullName>
    <label>Disposition PostalCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>