force-app/main/default/objects/Disposition__c/fields/Disposition_State__c.field-meta.xml
<CustomField>
    <fullName>Disposition_State__c</fullName>
    <label>Disposition State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>