force-app/main/default/objects/Disposition__c/fields/Disposition_Street__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Street__c</fullName>
    <label>Disposition Street</label>
    <type>TextArea</type>
</CustomField>