force-app/main/default/objects/Disposition__c/fields/Disposition_Type__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Type__c</fullName>
    <label>Disposition Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>