force-app/main/default/objects/Disposition__c/fields/Waste_Type_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Waste_Type_Accepted__c</fullName>
    <label>Waste Type Accepted</label>
    <length>80</length>
    <type>Text</type>
</CustomField>